Added reset button

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button>Click to input your grid eg. 16 by 16</button>
+    <h1>Etch-a-Sketch</h1>
+    <button id="create">Click to input your grid size</button>
+    <button id="clear">Clear grid</button>
     <div class="container"></div>
 </body>
 </html>
